--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h3 class="aba-conteudo-titulo-principal">Estudar
         4 cursos na Alura</h3>
         <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+        <div class="contador"></div>
         </div>
         
         <div class="aba-conteudo">
